// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
     React 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      from
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "react"
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    

    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
     uniquePropHOC 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      from
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "./lib/unique-prop-hoc"
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    


    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      class
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      Expire
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      extends
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      React
      <span
        className={
          Array [
            "token",
          ]
        }
        style={
          Object {
            "color": "#999",
          }
        }
      >
        .
      </span>
      Component
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      constructor
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    props
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
        
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      super
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    props
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    
        
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    state 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
     component
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
     props
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    children 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      componentDidMount
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
        
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      setTimeout
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =&gt;
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
            
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      setState
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
                component
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      :
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      null
    </span>
    
            
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    
        
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ,
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    props
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    time 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ||
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    props
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    seconds 
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      *
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#905",
        }
      }
    >
      1000
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      render
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    
        
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      return
    </span>
     
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    state
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    component
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    
    
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    

    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
  </code>
</pre>
`;

exports[`SyntaxHighlighter should just render text if syntax is not registered 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#690",
        }
      }
    >
      'hello'
    </span>
    <span
      className={
        Array [
          "token",
        ]
      }
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
  </code>
</pre>
`;
